--- a/lab6/Lab_6_Test_Script.ipynb
+++ b/lab6/Lab_6_Test_Script.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -233,6 +233,28 @@
    "source": [
     "test_child_picos(eci_1)\n",
     "test_child_picos(eci_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'cj3u8e35c006grag53yrdb7h3'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eci_1"
    ]
   },
   {
@@ -309,16 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
